// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error component renders correctly 1`] = `
<div
  className="loader"
>
  Error occured while fetching data.
</div>
`;

exports[`Footer component renders correctly 1`] = `
<div
  className="footer"
>
  © 
  2021
   The Elder Scrolls Legends™. All rights reserved
</div>
`;

exports[`Loader component renders correctly 1`] = `
<div
  className="loader"
>
  <div
    className="MuiCircularProgress-root MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
  <p>
    Loading...
  </p>
</div>
`;

exports[`NoData component renders correctly 1`] = `
<div
  className="loader"
>
  No more data is available.
</div>
`;

exports[`ScrollToTop component renders correctly 1`] = `
<div
  className="scroll-to-top"
  title="Scroll to top"
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    onClick={[Function]}
    viewBox="0 0 24 24"
  >
    <path
      d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
    />
  </svg>
</div>
`;

exports[`SearchMessage component renders correctly 1`] = `
<div
  className="search-message"
>
  test testing
</div>
`;
